git ignore for node modules

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "angularjs": "0.0.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "firebase": "^5.9.3",
     "mysql": "^2.16.0",
     "sweetalert": "^2.1.2"
   },
